# libnstzotero

./: .gitignore  AUTHORS  ChangeLog  HACKING  Makefile.am  Makefile.in  NEWS  README  README.md  THANKS  TODO  aclocal.m4  config.h.in  configure  configure.ac
doc/: Makefile.am  Makefile.in
po/: ChangeLog  POTFILES.in  en_GB.po
src/: Makefile.am  Makefile.in  nst-zotero.c
zotero/: 0001-Zotero-v3.0.8-Connector-2.1-expose-attachmentMode-in-saveItems.patch  0001-Zotero-v4.0.17-Connector-2.1-expose-attachmentMode-in-saveItems.patch
